my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EDVAR/EDVAR.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EDVAR.dml:30:10: In im
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EDVAR.dml:16:5: error EDVAR: duplicate definition of variable 'i'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EDVAR.dml:30:10: conflicting definition
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EDVAR.dml:19:7: In m
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EDVAR.dml:25:5: error EDVAR: duplicate definition of variable 'i'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EDVAR.dml:19:7: conflicting definition
